# congressional-record

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .woodpecker.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  parse.py  parsecr.py  parser.py  pyproject.toml  requirements.txt  run_tests.py  setup.py
.github/workflows/: ci.yml
.woodpecker/: .build.yaml  .lint.yaml  .test.yaml
congressionalrecord/: __init__.py  cli.py  schema.py
congressionalrecord/fdsys/: cr_parser.py  cr_parser_ncj.py  downloader.py  errors.py  simple_scrape.py  subclasses.py
congressionalrecord/govinfo/: cr_parser.py  downloader.py  subclasses.py
congressionalrecord/lib/: logging.py  regex.py  xml_annotator.py
congressionalrecord/pg_config/: copy_leg_info.sql  make_cr_indices.sql  make_cr_tables.sql  make_leg_indices.sql  make_leg_tables.py  populate_leg_tables.py
congressionalrecord/pg_run/: copy_cr_tables.sql  pg_cr_bulkwrite.py
dev_scripts/: README.md  generate_json_schema.py  validate_json.py
docs/: schema.md
docs/changes/: fixing-run-tests.md
fdsys/: cr_parse.py  cr_parser.py  simple_scrape.py  subclasses.py
lib/: logging.py  xml_annotator.py
output/2005/CREC-2005-05-20/: dip.xml  mods.xml  premis.xml
output/2005/CREC-2005-05-20/html/: CREC-2005-05-20-pt1-PgD521-2.htm  CREC-2005-05-20-pt1-PgD521-3.htm  CREC-2005-05-20-pt1-PgD521-4.htm  CREC-2005-05-20-pt1-PgD521-5.htm  CREC-2005-05-20-pt1-PgD521.htm  CREC-2005-05-20-pt1-PgD525.htm  CREC-2005-05-20-pt1-PgE1029-2.htm  CREC-2005-05-20-pt1-PgE1029-3.htm  CREC-2005-05-20-pt1-PgE1029.htm  CREC-2005-05-20-pt1-PgE1030-2.htm  CREC-2005-05-20-pt1-PgE1030-3.htm  CREC-2005-05-20-pt1-PgE1030.htm  CREC-2005-05-20-pt1-PgE1031-2.htm  CREC-2005-05-20-pt1-PgE1031-3.htm  CREC-2005-05-20-pt1-PgE1031-4.htm  CREC-2005-05-20-pt1-PgE1031.htm  CREC-2005-05-20-pt1-PgE1032-2.htm  CREC-2005-05-20-pt1-PgE1032-3.htm  CREC-2005-05-20-pt1-PgE1032.htm  CREC-2005-05-20-pt1-PgE1033-2.htm  CREC-2005-05-20-pt1-PgE1033-3.htm  CREC-2005-05-20-pt1-PgE1033-4.htm  CREC-2005-05-20-pt1-PgE1033.htm  CREC-2005-05-20-pt1-PgE1034-2.htm  CREC-2005-05-20-pt1-PgE1034-3.htm  CREC-2005-05-20-pt1-PgE1034.htm  CREC-2005-05-20-pt1-PgE1035-2.htm  CREC-2005-05-20-pt1-PgE1035-3.htm  CREC-2005-05-20-pt1-PgE1035.htm  CREC-2005-05-20-pt1-PgE1036-2.htm  CREC-2005-05-20-pt1-PgE1036-3.htm  CREC-2005-05-20-pt1-PgE1036-4.htm  CREC-2005-05-20-pt1-PgE1036-5.htm  CREC-2005-05-20-pt1-PgE1036.htm  CREC-2005-05-20-pt1-PgE1037-2.htm  CREC-2005-05-20-pt1-PgE1037-3.htm  CREC-2005-05-20-pt1-PgE1037-4.htm  (+64 more)
test/: run  test_parser.py
test/test_files/: Congressional Record, Volume 160 Issue 11 (Friday, January 17, 2014).htm  Congressional Record, Volume 160 Issue 5 (Thursday, January 9, 2014).htm
test/test_files/SOTU/: CREC-2014-01-28-pt1-PgH1473-5.txt  mods.xml
test/test_files/boiler_plate/: CREC-2014-01-28-pt1-PgE123-4.txt  CREC-2014-01-28-pt1-PgH1433-2.txt  CREC-2014-01-28-pt1-PgS493-2.txt  mods.xml
test/test_files/common_tags/: CREC-2013-01-23-pt1-PgE58-3.txt  mods.xml
test/test_files/example_problems/: CREC-2013-01-23-pt1-PgH225.xml  CREC-2013-01-23-pt1-PgH251-3.xml  CREC-2013-01-23-pt1-PgS226.xml
test/test_files/front_matter/: CREC-2014-01-15-pt1-PgH-FrontMatter.htm  CREC-2014-01-15-pt1-PgS-FrontMatter.htm
test/test_files/middle_initials/: CREC-2011-05-05-pt1-PgE817-2.txt  mods.xml
test/test_files/names/: CREC-1995-11-16-pt1-PgH13141-5.txt  CREC-1995-12-22-pt1-PgS19146.txt  CREC-2013-01-23-pt1-PgE49-2.txt  CREC-2013-01-23-pt1-PgE50-3.txt  CREC-2013-01-23-pt1-PgE53-4.txt  CREC-2013-01-23-pt1-PgE53.txt  CREC-2013-01-23-pt1-PgH225-5.txt  CREC-2013-01-23-pt1-PgH225-7.txt  CREC-2013-01-23-pt1-PgH251-2.txt  CREC-2013-01-23-pt1-PgS189-5.txt  CREC-2013-01-23-pt1-PgS226-5.txt  CREC-2014-01-06-pt1-PgS18-3.htm  CREC-2014-01-06-pt1-PgS28-3.htm  mods.xml
test/test_files/whitespace/: CREC-2013-10-16-pt1-PgE1522-2.txt  CREC-2013-10-30-pt1-PgH6909.txt  mods.xml
tests/: run  test_downloader.py  test_parser.py  test_suite.py  tests_travis.py
tests/test_files/CREC-1997-01-28/: dip.xml  mods.xml  premis.xml
tests/test_files/CREC-2005-07-20/: dip.xml  mods.xml  premis.xml
(+563 files in other folders)
